# claude-agent-sdk-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  ROADMAP.md
.claude/system/: features.json  future-features.json  history.txt  rules.txt
.github/workflows/: ci.yml  release.yml  upstream-check.yml
examples/: prompt_caching.rs  simple_chat.rs  streaming_chat.rs  tool_use.rs
hooks/: pre-commit
scripts/: install-hooks.sh
src/: batch.rs  client.rs  conversation.rs  error.rs  files.rs  lib.rs  models.rs  prompts.rs  retry.rs  streaming.rs  structured.rs  tokens.rs  types.rs
